begin homepage toevoegen

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    margin: 0%;
+    margin: 0;
 }
 
 .navbar {
@@ -10,12 +10,14 @@ body {
     color: rgb(0, 0, 0);
     font-size: small;
 }
+
 .start {
     display: flex;
     align-items: center;
     font-family: Arial;
     color: black;
 }
+
 .start img {
     padding-left: 10%;
     width: 85px;
@@ -29,6 +31,7 @@ body {
     align-items: center;
     color: black;
 }
+
 .einde a {
     margin-left: 20px;
     font-size: large;
@@ -36,6 +39,67 @@ body {
     color: black;
     text-decoration: none
 }
+
 .einde a:hover {
     color: rgb(112, 112, 200);
+}
+
+.top {
+    display: flex;
+}
+
+.card {
+    display: flex;
+    margin-top: 2%;
+    margin-left: 2%;
+    width: 600px;
+    border-radius: 10px;
+    border: #adadad solid;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #f1f0f0;
+}
+
+.card img {
+    width: 300px;
+    border-radius: 5px;
+}
+
+.card-content {
+    flex: 1;
+    padding: 20px;
+}
+
+.card h2 {
+    color: #333;
+}
+
+.card p {
+    color: #3d3939;
+}
+.card2 {
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 2%;
+    margin-left: auto;
+    margin-right: 2%;
+    width: 400px;
+    padding: 20px;
+    padding-top: 0%;
+    border-radius: 10px;
+    border: #adadad solid;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: #f1f0f0;
+}
+
+.card2 img {
+    width: 100%;
+    border-radius: 5px;
+}
+
+.card2 h2 {
+    color: #333;
+}
+
+.card2 p {
+    color: #3d3939;
 }
