--- a/style.css
+++ b/style.css
@@ -2,6 +2,17 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
 }
+.transparent-bg {
+    background-image: url('../Hero_Association_Headquarters.png');
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    opacity: 0.2;
+}
   .top {
       background-color: rgb(255, 255, 255);
   }
