--- a/Leaderboard/Leaderboard.css
+++ b/Leaderboard/Leaderboard.css
@@ -130,13 +130,20 @@ main {
     display: flex;
     flex-direction: column;
     margin-top: 2%;
-    margin-left: 2%;
+    margin-left: 25%;
     margin-bottom: 2%;
     width: 300px;
     border: #303030 solid;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background-color: #f1f0f0;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
+}
+.top3herocard {
+    display: flex;
+    justify-content: space-around;
+    width: 50px
+}
+.top3-hero-card:nth-child(2) {
+    order: -1;
 }
