--- a/Leaderboard/Leaderboard.css
+++ b/Leaderboard/Leaderboard.css
@@ -104,6 +104,13 @@ body {
     justify-content: space-around;
     width: 50px
 }
+.elieherocard img {
+    width: 300px;
+    height: auto;
+    border-radius: 10px;
+    align-items: center;
+    justify-content: center;
+}
 
 .top3-hero-card:nth-child(1) {
     border: rgb(161, 119, 1) solid;
@@ -180,17 +187,17 @@ main {
 
 #button1 {
     display: block;
-        width: 100%;
-        border: none;
-        background-color: rgb(112, 112, 200);
-        padding: 14px 28px;
-        font-size: 16px;
-        cursor: pointer;
-        text-align: center;
-        margin-left: 10px;
-        margin-right: 10px;
-        border: #000000 solid;
-        border-radius: 100px;
+    width: 100%;
+    border: none;
+    background-color: rgb(112, 112, 200);
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    border: #000000 solid;
+    border-radius: 100px;
 }
 
 #button2 {
@@ -211,18 +218,19 @@ main {
 
 #button3 {
     display: block;
-        width: 100%;
-        border: none;
-        background-color: rgb(112, 112, 200);
-        padding: 14px 28px;
-        font-size: 16px;
-        cursor: pointer;
-        text-align: center;
-        margin-left: 10px;
-        margin-right: 10px;
-        border: #000000 solid;
-        border-radius: 100px;
+    width: 100%;
+    border: none;
+    background-color: rgb(112, 112, 200);
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    margin-left: 10px;
+    margin-right: 10px;
+    border: #000000 solid;
+    border-radius: 100px;
 }
+
 #button4 {
     display: block;
     width: 100%;
@@ -237,6 +245,7 @@ main {
     border: #000000 solid;
     border-radius: 100px;
 }
+
 #button5 {
     display: block;
     width: 100%;
@@ -250,4 +259,41 @@ main {
     margin-right: 10px;
     border: #000000 solid;
     border-radius: 100px;
+}
+
+.tooltip {
+    position: absolute;
+    right: 0;
+    top: 0;
+    cursor: pointer;
+    display: flex;
+    justify-content: end;
+    margin-right: 10px;
+    margin-top: 10px;
+}
+
+.tooltip .tooltiptext {
+    visibility: hidden;
+    background-color: #333;
+    color: #fff;
+    text-align: center;
+    border-radius: 5px;
+    padding: 5px;
+    position: absolute;
+    z-index: 1;
+    top: 50px;
+    right: 0px;
+    margin-top: -15px;
+    opacity: 0.5;
+    transition: opacity 1s;
+}
+
+.tooltip:hover .tooltiptext {
+    visibility: visible;
+    opacity: 1;
+}
+
+.larger-svg {
+    width: 32px;
+    height: 32px;
 }
