--- a/Leaderboard/Leaderboard.css
+++ b/Leaderboard/Leaderboard.css
@@ -158,14 +158,15 @@ main {
     align-items: center;
     justify-content: center;
 }
-
+.top3herocard:nth-child(1) {
+    padding-bottom: 0%;
+}
 .top3-hero-card {
     display: flex;
     flex-direction: column;
     margin-top: 2%;
     margin-left: 25%;
     margin-bottom: 2%;
-    width: 300px;
     border: #303030 solid;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -177,16 +178,16 @@ main {
 .top3herocard {
     display: flex;
     justify-content: space-around;
-    width: 50px
+    width: 50px;
 }
 
 .top3-hero-card:nth-child(2) {
     order: -1;
-    margin-top: 120%;
+
 }
 
 .top3-hero-card:nth-child(3) {
-    margin-top: 120%;
+
 }
 
 .buttons {
