--- a/hero-profile/profile.css
+++ b/hero-profile/profile.css
@@ -190,6 +190,34 @@ body {
     display: flex;
     justify-content: center;
 }
+.vote {
+    display: flex;
+    justify-content: center;
+    margin-top: 70px;
+    margin-bottom: 70px;
+}
+#upvote {
+    background-color: rgb(0, 255, 0);
+    margin-right: 20px;
+    border: 0cm;
+    border-radius: 50px;
+    padding: 20px;
+}
+#upvote:hover {
+    background-color: rgb(0, 177, 0);
+    cursor: pointer;
+}
+#downvote {
+    background-color: red;
+    margin-left: 20px;
+    border: 0cm;
+    border-radius: 50px;
+    padding: 20px;
+}
+#downvote:hover {
+    background-color: rgb(172, 0, 0);
+    cursor: pointer;
+}
 .footer {
     background-color: rgb(223, 222, 245);
     color: #000000;
