--- a/hero-profile/profile.css
+++ b/hero-profile/profile.css
@@ -1,7 +1,6 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
 }
 
 .transparent-bg {
@@ -232,4 +231,8 @@ body {
 .footer img {
     width: 85px;
     height: auto;
+}
+.top3-hero-name {
+    font-size: 24px;
+    font-weight: 400;
 }
