--- a/Leaderboard/Leaderboard.css
+++ b/Leaderboard/Leaderboard.css
@@ -1,6 +1,9 @@
 body {
     margin: 0;
     font-family: Verdana, Sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 .top {
@@ -141,15 +144,19 @@ body {
     background-color: rgb(205, 127, 50);
     color: rgb(90, 58, 26);
 }
+
 .top3-hero-card:nth-child(3) svg {
     color: rgb(252, 223, 102);
 }
+
 .top3-hero-card:nth-child(2) svg {
     color: rgb(252, 223, 102);
 }
+
 .top3-hero-card:nth-child(1) svg {
     color: rgb(252, 223, 102);
 }
+
 main {
     overflow: hidden;
     position: relative;
@@ -262,6 +269,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: auto;
 }
 
 .footer img {
@@ -461,15 +469,19 @@ main {
     display: flex;
     align-items: center;
 }
+
 .star-A {
     color: rgb(230, 0, 255);
 }
+
 .star-B {
     color: rgb(0, 115, 255);
 }
+
 .star-S {
     color: rgb(255, 140, 0);
 }
+
 .star-C {
     color: rgb(0, 255, 26);
 }
