buttons werken niet

--- a/Leaderboard/Leaderboard.css
+++ b/Leaderboard/Leaderboard.css
@@ -261,7 +261,7 @@ main {
     height: 32px;
 }
 
-.footer {
+footer {
     background-color: rgb(223, 222, 245);
     color: #000000;
     padding: 20px;
@@ -269,14 +269,14 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
     margin-top: auto;
 }
 
-.footer img {
+footer img {
     width: 85px;
     height: auto;
 }
-
 .dropdown {
     position: relative;
     display: inline-block;
