--- a/hero-profile/profile.css
+++ b/hero-profile/profile.css
@@ -107,7 +107,7 @@ body {
     display: flex;
 }
 
-.card-button {
+.card-button:nth-child(1) {
     margin-left: 5px;
     /* Adjust this value to control the space between buttons */
     padding: 8px 16px;
@@ -181,39 +181,6 @@ body {
     height: auto;
     width: 300px;
     margin-right: 10px;
-}
-
-.vote {
-    display: flex;
-    justify-content: center;
-    margin-top: 70px;
-    margin-bottom: 70px;
-}
-
-#upvote {
-    background-color: rgb(0, 255, 0);
-    margin-right: 20px;
-    border: 0cm;
-    border-radius: 50px;
-    padding: 20px;
-}
-
-#upvote:hover {
-    background-color: rgb(0, 177, 0);
-    cursor: pointer;
-}
-
-#downvote {
-    background-color: red;
-    margin-left: 20px;
-    border: 0cm;
-    border-radius: 50px;
-    padding: 20px;
-}
-
-#downvote:hover {
-    background-color: rgb(172, 0, 0);
-    cursor: pointer;
 }
 
 .top3-hero-name {
