--- a/hero-profile/profile.css
+++ b/hero-profile/profile.css
@@ -117,6 +117,15 @@ body {
     border-radius: 5px;
     cursor: pointer;
 }
+.card-button:nth-child(2) {
+    margin-left: 5px;
+    padding: 8px 16px;
+    background-color: #ff0000;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
 .card-button:hover {
     background-color: #45a049;
@@ -125,7 +134,7 @@ body {
     display: flex;
 }
 #card3 {
-    display: flex;
+
     width: 400px;
     height: 165px;
     margin-left: 50px;
